--- a/resume.tex
+++ b/resume.tex
@@ -65,7 +65,8 @@
 
 \section*{\headingfont Work Experience}
 
-\noindent\textbf{Principal Software Architect} \textperiodcentered Yoder Robotics (Hybrid, Boston, MA) \hfill 3/2019 - 10/2020
+\begin{itemize}[noitemsep, topsep=0pt, itemsep=1.5em, label=]
+\item \textbf{Principal Software Architect} \textperiodcentered Yoder Robotics (Hybrid, Boston, MA) \hfill 3/2019 - 10/2020
 
 \begin{itemize}[label=›, noitemsep, topsep=0pt, leftmargin=1em]
 	\item Architected and implemented a distributed neural network system in Rust that reduced autonomous vehicle decision latency by 78\%, enabling real-time obstacle avoidance capabilities in urban environments.
@@ -74,7 +75,7 @@
 	\item Pioneered an embedded Linux kernel optimization that reduced boot time from 40 seconds to under 5 seconds, dramatically improving field deployment scenarios and saving an estimated \$2.3M in operational costs annually.
 \end{itemize}
 
-\noindent\textbf{Lead Systems Engineer} \textperiodcentered Quantum Compute Labs (Remote, San Francisco, CA) \hfill 6/2017 - 2/2019
+\item \textbf{Lead Systems Engineer} \textperiodcentered Quantum Compute Labs (Remote, San Francisco, CA) \hfill 6/2017 - 2/2019
 
 \begin{itemize}[label=›, noitemsep, topsep=0pt, leftmargin=1em]
 	\item Developed a Python-based quantum algorithm simulation framework that accurately predicted qubit decoherence patterns, increasing quantum operation stability by 47\% and enabling longer computation windows.
@@ -83,8 +84,7 @@
 	\item Designed and implemented an automated CI/CD pipeline for quantum firmware that decreased deployment errors by 94\% and reduced update cycles from weeks to hours.
 \end{itemize}
 
-\noindent\textbf{Senior Firmware Specialist} \textperiodcentered MediTech Innovations (Onsite, Austin, TX) \hfill 9/2015 - 5/2017
-
+\item \textbf{Senior Firmware Specialist} \textperiodcentered MediTech Innovations (Onsite, Austin, TX) \hfill 9/2015 - 5/2017
 \begin{itemize}[label=›, noitemsep, topsep=0pt, leftmargin=1em]
 	\item Redesigned the firmware for a critical medical device using FreeRTOS, reducing power consumption by 68\% and extending battery life from 8 hours to 26 hours while maintaining full FDA compliance.
 	\item Implemented a secure over-the-air update system for implantable medical devices that maintained 99.9999\% reliability while adding military-grade encryption, a solution later mandated as company standard.
@@ -92,13 +92,13 @@
 	\item Created an embedded debugging tool that reduced diagnostic time from days to minutes, accelerating development cycles by 40\% and enabling the company to beat competitors to market by 5 months.
 \end{itemize}
 
-\noindent\textbf{IoT Systems Architect} \textperiodcentered GreenGrid Solutions (Hybrid, Portland, OR) \hfill 1/2013 - 8/2015
-
+\item \textbf{IoT Systems Architect} \textperiodcentered GreenGrid Solutions (Hybrid, Portland, OR) \hfill 1/2013 - 8/2015
 \begin{itemize}[label=›, noitemsep, topsep=0pt, leftmargin=1em]
 	\item Designed and implemented a scalable IoT platform using Rust and C that managed 500,000+ smart grid sensors, resulting in a 23\% improvement in energy distribution efficiency across three major metropolitan areas.
 	\item Architected a revolutionary peer-to-peer security protocol for edge devices that withstood penetration testing by three independent security firms and was later published as an IEEE standard.
 	\item Led the development of a predictive maintenance system using machine learning that decreased unplanned outages by 87\% and saved an estimated \$45M in operational costs over two years.
 	\item Created a custom Linux distribution for energy monitoring devices that required 42\% less storage space while improving processing speed by 31\%, enabling deployment on lower-cost hardware and saving \$3.2M in device costs.
+\end{itemize}
 \end{itemize}
 
 \section*{\headingfont\color{headingcolor} Education}
